# MetaEC_2

./: CMakeLists.txt  README.md
crash-test/: CMakeLists.txt  cncrash_test.cc  mncrash_test.cc  mncrash_test.h  mncrash_test_fr.cc  mncrash_test_fr.h  mncrash_test_fr_multi_clients.cc  mncrash_test_multi_clients.cc
micro-test/: CMakeLists.txt  test_client_cache.cc  test_clientfr_latency.cc  test_memory_consumption.cc  test_multi_client.cc  test_multi_client.h  test_multi_clientfr.cc  test_multi_clientfr.h  test_race.cc  test_server.cc  test_serverfr.cc
setup/: download_workload.sh  split-workload.py
src/: CMakeLists.txt
src/compute_pool/: client.cc  client.h  client_mm.cc  client_mm.h
src/core/: a.out  circular_queue.h  combination.cc  combination.h  config.cc  config.h  hashtable.cc  hashtable.h  ib.cc  ib.h  kv_utils.cc  kv_utils.h  nm.cc  nm.h  super_queue.cc  super_queue.h  thread_poll.h
src/ec_cache/: ecmeta_cache.cc  ecmeta_cache.h  lrucache.hpp
src/ec_encoding/: buffer.cc  buffer.h  city_hash.cc  city_hash.h  echashtable.cc  echashtable.h  hashring.cc  hashring.h  hashringtable.cc  hashringtable.h  rscoding.cc  rscoding.h
src/ec_log/: ec_log.cc  ec_log.h
src/fragec/: clientfr.cc  clientfr.h  clientfr_mm.cc  clientfr_mm.h  indexfr.h  serverfr.cc  serverfr.h  serverfr_mm.cc  serverfr_mm.h
src/memory_pool/: server.cc  server.h  server_mm.cc  server_mm.h
twitter-test/: CMakeLists.txt  twitter_test.cc  twitter_test.h  twitter_test_multi_clients.cc
ycsb-test/: CMakeLists.txt  ycsb_test.cc  ycsb_test.h  ycsb_test_multi_client.cc
